# Simard

./: .gitignore  .merge_head_types.rs  .merge_incoming_types.rs  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  bin.js  bin.test.js  build.rs  mkdocs.yml  package-lock.json  package.json  readme.test.js
.amplihack/: blarify_stale  indexing.pid
.amplihack/copilot-compat/: copilot  copilot.cmd  copilot.py
.claude/context/: PROJECT.md  PROJECT.md.bak
.github/hooks/: amplihack-hooks.json  error-occurred  post-tool-use  pre-tool-use  session-start  session-stop  user-prompt-submit
.github/workflows/: coverage.yml  docs.yml  release.yml  verify.yml
Specs/: IMPLEMENTATION_PLAN.md  ProductArchitecture.md
docs/: ROADMAP.md  agents.md  amplihack-comparison.md  amplihack-rs-parity.md  amplihack-string-audit.md  daemon-mode.md  dashboard.md  distributed-operations.md  fail-open-audit.md  gym-scenario-gap-analysis.md  handoff-20260331-stub-removal.md  index.md  installation.md  meeting-prep-20260331.md  memory.md  patterns.md  philosophy.md  prompt-delivery.md  quickstart.md  recipes.md  safe-self-update.md  skills.md  troubleshooting.md  workflows.md
docs/architecture/: agent-composition.md  bridge-pattern.md  cognitive-memory.md  engineer-agent-orchestration.md  implementation-plan.md  ooda-meeting-handoff-integration.md  overview.md  system-architecture.md  unified-meeting-backend.md
docs/concepts/: automated-disk-health.md  config-driven-subprocess-env.md  goal-board-corruption-guards.md  goal-board-persistence.md  gym-error-handling-debug.md  gym-knowledge-recall.md  improvement-context-execution-evidence-gap.md  progress-evidence-gating.md  prompt-driven-brain-iteration.md  prompt-driven-ooda-brain.md  prompt-driven-tdd-discipline.md  same-path-copy-guard.md  stewardship-mode.md  text-based-brain-protocol.md  topology-neutral-runtime-kernel.md  truthful-runtime-metadata.md  unified-recipe-brain.md
docs/hive_event_bus/: README.md
docs/howto/: add-a-new-recipe-brain-phase.md  attach-to-a-running-engineer.md  carry-meeting-decisions-into-engineer-sessions.md  clean-fixture-leaks.md  configure-bootstrap-and-inspect-reflection.md  configure-disk-health-check.md  configure-llm-provider.md  diagnose-brain-decision-parse-failures.md  diagnose-decide-orient-parse-failures.md  diagnose-rejected-progress-claims.md  edit-the-engineer-system-prompt.md  edit-the-ooda-brain-prompt.md  export-and-restore-runtime-handoff.md  export-meeting-markdown.md  file-stewardship-issues-from-orchestrator-runs.md  fix-ci-linker-oom.md  grant-engineer-write-permissions.md  inspect-and-clean-engineer-worktrees.md  inspect-durable-goal-register.md  inspect-improvement-curation-state.md  inspect-meeting-records.md  move-from-terminal-recipes-into-engineer-runs.md  reclaim-disk-space-and-run-low-space-rust-builds.md  recover-from-meeting-close-timeout.md  recover-goal-board.md  resume-an-interrupted-meeting.md  run-dashboard-e2e-tests.md  run-ooda-daemon.md  spawn-engineers-from-ooda-daemon.md  start-a-meeting.md  test-dashboard-overview-elements.md  unblock-stuck-ooda-goals.md  use-agent-orchestration-engineer-loop.md  use-meeting-templates.md  view-agent-terminal-logs.md
docs/meetings/: 2026-04-04-self-reflection.md  2026-04-06-stewardship-reflection.md
docs/operations/: cognitive-memory-durability.md  index.md  meeting-handoffs.md  pre-commit-setup.md  progress-evidence-kill-switch.md
docs/operator-dashboard/: azlin-tmux-sessions.md  event-bus-stats.md
docs/reference/: agent-log-websocket.md  assess-only-outcome.md  azlin-hosts-self-membership.md  base-type-adapters.md  bridge-wire-protocol.md  cognitive-memory-bridge-helpers.md  copilot-meeting-mode.md  (+36 more)
examples/: cognitive_memory_crash_helper.rs  cross_session_recall_helper.rs  restore_active_goal.rs  sigterm_durability_helper.rs
npm/: bin.js  bin.test.js  package.json
python/: bridge_server.py  simard_gym_bridge.py  simard_gym_bridge.py.bak.20260511055238  simard_knowledge_bridge.py  simard_memory_bridge.py  simard_memory_server.py
scripts/: cargo-low-space  check-rust-only-gate.sh  check-rust-only-policy.sh  check-tdd-ordering.sh  check_vm.sh  install-precommit.sh  reclaim-build-space  redeploy-local.sh  simard-ooda.service
src/: agent_goal_assignment.rs  agent_program.rs  agent_roles.rs  agent_supervisor.rs  base_type_claude_agent_sdk.rs  base_type_copilot.rs  base_type_harness.rs  base_type_ms_agent.rs  base_type_pending_sdk.rs  base_type_rustyclawd.rs  base_type_turn.rs  base_types.rs  bootstrap.rs  bridge.rs  bridge_circuit.rs  bridge_launcher.rs  bridge_subprocess.rs  cmd_cleanup.rs  cmd_ensure_deps.rs  cmd_install.rs  cmd_self_update.rs  copilot_status_probe.rs  copilot_task_submit.rs  cost_tracking.rs  disk_health.rs  engineer_loop.rs  engineer_plan.rs  error.rs  eval_watchdog.rs  evidence.rs  git_guardrails.rs  goal_curation.rs  goals.rs  greeting_banner.rs  gym.rs  gym_bridge.rs  gym_history.rs  gym_scoring.rs  handoff.rs  hive_event_bus.rs  (+67 more)
tests/: act_on_decisions.rs  base_type_live.rs  base_types.rs  bin_simard_engineer_loop_recipe_cli.rs  bin_simard_engineer_step_cli.rs  bin_simard_gym_cli.rs  bin_simard_improve_step_cli.rs  bin_simard_ooda_step_cli.rs  bin_simard_operator_probe_cli.rs  bin_simard_self_improve_recipe_cli.rs  bootstrap.rs  bridge.rs  bridge_live.rs  check_tdd_ordering_test.sh  cli_golden.rs  cognitive_memory_crash_durability.rs  cognitive_memory_cross_session_recall.rs  cognitive_memory_durability.rs  cognitive_memory_silent_drop_counter.rs  composition.rs  contracts.rs  daemon_sigterm_durability.rs  distributed.rs  e2e_engineer_external_repo.rs  engineer_copilot_permissions.rs  engineer_loop.rs  engineer_loop_bounded_memory.rs  engineer_supervisor_tmux_env.rs  goal_stewardship.rs  gym_eval.rs  handoff_redaction.rs  help_base_type_consistency.rs  improvement_curation.rs  install_real.rs  install_smoke.rs  issue_1909_state_root_required.rs  knowledge.rs  lifecycle.rs  meeting_close_outside_in.rs  meeting_goals.rs  (+27 more)
(+667 files in other folders)
