[package]
name = "simard"
version = "0.15.0"
edition = "2024"
default-run = "simard"

[[bin]]
name = "simard-gym"
path = "src/bin/simard_gym.rs"

[dependencies]
# TODO: enable `ladybug` feature once amplihack-memory-lib publishes ladybug-graph-rs to crates.io
# amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git", features = ["ladybug"] }
amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git" }
rustyclawd-core = { git = "https://github.com/rysweet/RustyClawd.git" }
rustyclawd-tools = { git = "https://github.com/rysweet/RustyClawd.git" }
lbug = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "net", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "auth"] }
uuid = { version = "1.18.1", features = ["v7"] }
chrono = "0.4"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
