[package]
name = "simard"
version = "0.16.0"
edition = "2024"
default-run = "simard"

[[bin]]
name = "simard-gym"
path = "src/bin/simard_gym.rs"

[dependencies]
# TODO: enable `ladybug` feature once amplihack-memory-lib publishes ladybug-graph-rs to crates.io
# amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git", features = ["ladybug"] }
amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git" }
rustyclawd-core = { git = "https://github.com/rysweet/RustyClawd.git" }
rustyclawd-tools = { git = "https://github.com/rysweet/RustyClawd.git" }
lbug = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "net", "macros"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "auth"] }
uuid = { version = "1.18.1", features = ["v7"] }
chrono = "0.4"
dirs = "6"
crc32fast = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ctrlc = "3.4"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
proptest = "1"
serial_test = "3.4.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
