[package]
name = "simard"
version = "0.18.0"
edition = "2024"
default-run = "simard"

[[bin]]
name = "simard-gym"
path = "src/bin/simard_gym.rs"

[[bin]]
name = "simard-ooda-step"
path = "src/bin/simard_ooda_step.rs"

[[bin]]
name = "simard-improve-step"
path = "src/bin/simard_improve_step.rs"

[[bin]]
name = "simard-self-improve-recipe"
path = "src/bin/simard_self_improve_recipe.rs"

[[bin]]
name = "simard-engineer-step"
path = "src/bin/simard_engineer_step.rs"

[[bin]]
name = "simard-engineer-loop-recipe"
path = "src/bin/simard_engineer_loop_recipe.rs"

[dependencies]
# TODO: enable `ladybug` feature once amplihack-memory-lib publishes ladybug-graph-rs to crates.io
# amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git", features = ["ladybug"] }
amplihack-memory = { git = "https://github.com/rysweet/amplihack-memory-lib.git" }
rustyclawd-core = { git = "https://github.com/rysweet/RustyClawd.git" }
rustyclawd-tools = { git = "https://github.com/rysweet/RustyClawd.git" }
lbug = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "net", "macros", "sync"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "auth"] }
uuid = { version = "1.18.1", features = ["v7"] }
chrono = "0.4"
dirs = "6"
crc32fast = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ctrlc = { version = "3.4", features = ["termination"] }
nix = { version = "0.29", features = ["signal", "fs"] }
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
tracing-opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
slow-tests = []

[dev-dependencies]
assert_cmd = "2"
proptest = "1"
serial_test = "3.4.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Dev/test profiles: minimal debuginfo philosophy.
#
# Goal: keep panics useful (file:line in backtraces for OUR crate) without
# carrying gigabytes of dependency debuginfo. `target/debug/` was ~38GB
# before this; almost all of that was dependency .rmeta + loose DWARF
# split-debug fragments.
#
# Strategy:
# 1. line-tables-only on our own crate → Simard panics still show
#    file:line in backtraces.
# 2. debug = 0 on every dependency → dependency stack frames lose
#    file:line (they show as `<unknown>:?`) but we almost never need to
#    debug into dep internals; cuts ~80% of debug-build size.
# 3. split-debuginfo unset → embedded DWARF; no loose .o fragments.
# 4. incremental = false in dev → no per-build accumulation in
#    target/debug/incremental.
#
# Re-enable full debug for one build with:
#   RUSTFLAGS='-C debuginfo=2'
# or
#   CARGO_PROFILE_DEV_DEBUG=2 cargo build
[profile.dev]
debug = "line-tables-only"
incremental = false

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = false

[profile.test.package."*"]
debug = false
